feat: update server template

--- a/compose.yaml
+++ b/compose.yaml
@@ -4,6 +4,8 @@ services:
     command: go run main.go
     env_file:
       - .env
+    ports:
+      - 3000:3000
     networks:
       - kafka-network
       - postgres-network
