--- a/compose.yaml
+++ b/compose.yaml
@@ -39,9 +39,9 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data 
     environment:
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
 
 networks:
   kafka-network:
